--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.678.0",
     "@prisma/client": "^6.19.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^24.10.1",
     "prisma": "^6.19.0",
     "ts-node-dev": "^2.0.0",
